[gd_scene load_steps=7 format=3 uid="uid://bsv5nso1l6hhu"]

[ext_resource type="Script" uid="uid://bscmckha1fmw6" path="res://Scenes/Systems/Dialog/Test/DialogViewTest.gd" id="1_3x8rw"]
[ext_resource type="Script" uid="uid://cgia1vhwq502l" path="res://Scenes/Systems/Dialog/Test/DialogSystemTest.gd" id="1_x4u42"]
[ext_resource type="Texture2D" uid="uid://msopuii5k5h1" path="res://Assets/Portraits/character_a_64x64.jpeg" id="2_234wd"]
[ext_resource type="Script" uid="uid://ccjxggc7r7g3q" path="res://Scenes/Systems/Dialog/Test/DialogControllerTest.gd" id="3_qrjav"]
[ext_resource type="Script" uid="uid://ddeqgsh3haoy0" path="res://Scenes/Systems/Dialog/Test/ActorLoaderTest.gd" id="5_x06od"]
[ext_resource type="Script" uid="uid://d0o15p76v0811" path="res://Scenes/Systems/Dialog/Test/DialogSystemEventsTest.gd" id="6_s3jl1"]

[node name="DialogSystemTest" type="Node2D"]
script = ExtResource("1_x4u42")

[node name="DialogCanvas" type="CanvasLayer" parent="."]

[node name="DialogPanel" type="Panel" parent="DialogCanvas"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -468.0
offset_right = 386.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="DialogCanvas/DialogPanel"]
position = Vector2(175, 172)

[node name="TopicsVBox" type="VBoxContainer" parent="DialogCanvas/DialogPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 62.5
offset_right = 296.0
offset_bottom = 614.5

[node name="DialogVBox" type="VBoxContainer" parent="DialogCanvas/DialogPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 400.0
offset_top = 57.0
offset_right = 729.0
offset_bottom = 616.0

[node name="DialogCloseBtn" type="Button" parent="DialogCanvas/DialogPanel"]
layout_mode = 0
offset_left = 693.0
offset_top = 3.5
offset_right = 743.0
offset_bottom = 34.5
text = "Close"

[node name="DetectiveLeft" type="CanvasLayer" parent="DialogCanvas"]
unique_name_in_owner = true

[node name="PortraitPanel" type="Panel" parent="DialogCanvas/DetectiveLeft"]
offset_right = 300.0
offset_bottom = 300.0

[node name="Sprite2D" type="Sprite2D" parent="DialogCanvas/DetectiveLeft/PortraitPanel"]

[node name="ActorRight" type="CanvasLayer" parent="DialogCanvas"]
unique_name_in_owner = true

[node name="panel" type="Panel" parent="DialogCanvas/ActorRight"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 300.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="ActorPortrait" type="Sprite2D" parent="DialogCanvas/ActorRight/panel"]
unique_name_in_owner = true
position = Vector2(150, 150)
texture = ExtResource("2_234wd")

[node name="ActorLabel" type="Label" parent="DialogCanvas/ActorRight"]
unique_name_in_owner = true
offset_left = 1738.0
offset_top = 307.0
offset_right = 1814.0
offset_bottom = 336.0
text = "tmp"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Views" type="CanvasLayer" parent="."]

[node name="DialogViewTest" type="Node" parent="Views"]
unique_name_in_owner = true
script = ExtResource("1_3x8rw")

[node name="PortraitViewTest" type="Node" parent="Views"]

[node name="Controllers" type="Node" parent="."]

[node name="DialogControllerTest" type="Node" parent="Controllers"]
unique_name_in_owner = true
script = ExtResource("3_qrjav")

[node name="Objects" type="Node" parent="."]

[node name="Actors" type="Node" parent="Objects"]
unique_name_in_owner = true

[node name="Loaders" type="Node" parent="."]

[node name="ActorLoaderTest" type="Node" parent="Loaders"]
script = ExtResource("5_x06od")

[node name="Events" type="Node" parent="."]

[node name="DialogSystemEventsTest" type="Node" parent="Events"]
unique_name_in_owner = true
script = ExtResource("6_s3jl1")

[connection signal="pressed" from="DialogCanvas/DialogPanel/DialogCloseBtn" to="Events/DialogSystemEventsTest" method="_on_event_close_dialog"]
